Bug 399332 - 'computer needs restart' needs restart button
Summary: 'computer needs restart' needs restart button
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Updates (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2018-10-03 10:12 UTC by Harald Sitter
Modified: 2018-10-05 16:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (23.21 KB, image/png)
2018-10-03 10:12 UTC, Harald Sitter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2018-10-03 10:12:59 UTC
Created attachment 115376 [details]
screenshot

When installing updates that cause a reboot-required notification there is no way to actually a trigger the reboot from update plasmoid. Instead it says there are no updates with a button to launch the update page. 


STEPS TO REPRODUCE
1. update e.g. nivida-* on ubuntu
2. get reboot required state in updater icon in tray
3. click updater
4. observe the pop up being useless

OBSERVED RESULT


EXPECTED RESULT

MAKE IT BE USEFUL, ALEIX! Have a button or something.
Comment 1 Aleix Pol 2018-10-05 16:10:48 UTC
Git commit 853a092f1e642e013ebd4718588881632d5af728 by Aleix Pol.
Committed on 05/10/2018 at 16:08.
Pushed by apol into branch 'master'.

notifier: Include a button on the plasmoid to reboot when necessary

M  +8    -4    notifier/DiscoverNotifier.cpp
M  +4    -0    notifier/DiscoverNotifier.h
M  +9    -0    notifier/plasmoid/contents/ui/Full.qml

https://commits.kde.org/discover/853a092f1e642e013ebd4718588881632d5af728