notifier: Include a button on the plasmoid to reboot when necessary

BUG: 399332