notifier/DiscoverNotifier.cpp
@@ -44,6 +44,7 @@ DiscoverNotifier::DiscoverNotifier(QObject * parent)
                 m_needsReboot = true;
                 showRebootNotification();
                 Q_EMIT updatesChanged();
+                Q_EMIT needsRebootChanged(true);
             }
         });
     }
@@ -203,10 +204,13 @@ void DiscoverNotifier::showRebootNotification()
     notification->setTitle(i18n("Restart is required"));
     notification->setText(i18n("The system needs to be restarted for the updates to take effect."));
 
-    connect(notification, &KNotification::action1Activated, this, [] () {
-        QDBusInterface interface(QStringLiteral("org.kde.ksmserver"), QStringLiteral("/KSMServer"), QStringLiteral("org.kde.KSMServerInterface"), QDBusConnection::sessionBus());
-        interface.asyncCall(QStringLiteral("logout"), 0, 1, 2); // Options: do not ask again | reboot | force
-    });
+    connect(notification, &KNotification::action1Activated, this, &DiscoverNotifier::loadBackends);
 
     notification->sendEvent();
+}
+
+void DiscoverNotifier::loadBackends()
+{
+    QDBusInterface interface(QStringLiteral("org.kde.ksmserver"), QStringLiteral("/KSMServer"), QStringLiteral("org.kde.KSMServerInterface"), QDBusConnection::sessionBus());
+    interface.asyncCall(QStringLiteral("logout"), 0, 1, 2); // Options: do not ask again | reboot | force
 }
